PL add. action btn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220905142817">
+    <meta name="google" content="notranslate">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220905182123">
     <title>Територія реабілітації</title>
 </head>
 
@@ -13,7 +14,7 @@
     <div class="wrapper">
         <header class="header">
     <div class="header__container">
-        <a href="../index.html" class="header__logo lng-header__logo">Територія реабілітації</a>
+        <a data-goto=".home" href="#" class="header__logo lng-header__logo">Територія реабілітації</a>
         <div class="menu-lng">
             <div class="header__menu menu">
                 <div class="menu__icon">
@@ -45,6 +46,7 @@
                 <select>
                     <option value="UA">UA</option>
                     <option value="EN">EN</option>
+                    <option value="PL">PL</option>
                 </select>
             </div>
         </div>
@@ -59,15 +61,15 @@
 
                         <div class="home__subtitle subtitle-home">
                             <div class="subtitle-home__item">
-                                <span class="lng-subtitle-home__item-1">від</span>
-                                <h2 class="subtitle-home__text lng-subtitle-home__text-1">Прихистоку</h2>
+                                <!--<span class="lng-subtitle-home__item-1">від</span>-->
+                                <h2 class="subtitle-home__text lng-subtitle-home__text-1">Прихисток</h2>
                             </div>
                             <div class="subtitle-home__item">
-                                <span class="lng-subtitle-home__item-2">до</span>
-                                <h2 class="subtitle-home__text lng-subtitle-home__text-2">Реабілітації</h2>
+                                <!--<span class="lng-subtitle-home__item-2">до</span>-->
+                                <h2 class="subtitle-home__text lng-subtitle-home__text-2">Реабілітація</h2>
                             </div>
                             <div class="subtitle-home__item">
-                                <span class="lng-subtitle-home__item-3">та</span>
+                                <!--<span class="lng-subtitle-home__item-3">та</span>-->
                                 <h2 class="subtitle-home__text lng-subtitle-home__text-3">Створення бізнесу</h2>
                             </div>
                         </div>
@@ -195,14 +197,14 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="needs-swiper-btns">
                         <div class="needs-swiper-btn needs-swiper-btn-prev swiper-button-prev">←</div>
                         <div class="needs-swiper-btn  needs-swiper-btn-next swiper-button-next">→</div>
                     </div>
-
-
-
+                    <div class="action">
+                        <a href="#" class="lng-needs-action1 btn action__btn ">Підтримати</a>
+                        <a href="#" class="lng-needs-action2 btn btn-f action__btn ">Стати партнером</a>
+                    </div>
                 </div>
             </div>
 
@@ -210,6 +212,7 @@
                 <div class='about__container'>
                     <h3 class="lng-about__title about__title title">Про нас</h3>
                     <div class="about__body">
+                        <!--!-------------- Навігація--------------  -->
                         <div class="about__left">
                             <div class="about__navigation">
                                 <div data-tab-name="t1" class="_active about__navigation-item">
@@ -225,6 +228,7 @@
 
                             </div>
                         </div>
+                        <!--!-------------- Контент--------------  -->
                         <div class="about__right content-about">
                             <div class="content-about__body">
                                 <!--!-------------- Історія--------------  -->
@@ -640,104 +644,62 @@
             </div>
             <div class="report">
                 <div class='report__container'>
-                    <h3 class="report__title title">Звіт</h3>
+                    <h3 class="lng-report__title report__title title">Звіт</h3>
                     <div class="report__body">
                         <!-- Прихисток -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
-                                <p class="item-report__title">Прихисток</p>
+                                <p class="lng-item-report__title1 item-report__title">Прихисток</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
-                                        <p class="item-report__name">
+                                        <p class="lng-item-report__name1 item-report__name">
                                             Придбано комп’ютерну техніки (комп’ютер, принтер, мобільний телефон)</p>
-                                        <!--<p class="item-report__price">50 шт.</p>-->
+                                        <!--<p class="lng-item-report__count1 item-report__count ">50 шт.</p>-->
                                     </div>
                                     <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбано підсилювачі мобільного звязку</p>
-                                        <p class="item-report__price">2 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Облаштування дитячих споривно-ігрових майданчиків в с. Росохи та с.
-                                            Волошиново
+                                        <p class="lng-item-report__name2 item-report__name">
+                                            Придбано підсилювачі мобільного зв’язку
                                         </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                        <p class="lng-item-report__count2 item-report__count ">2 шт.</p>
                                     </div>
                                     <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Облаштовано навчальний клас та ігрову кімнату для дітей біженців у селі
-                                            Росохи
+                                        <p class="lng-item-report__name3 item-report__name">
+
                                         </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Проведення вуличного освітлення у селах Росохи та Волошиново
-                                        </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбання сміттєвих контейнерів </p>
-                                        <p class="item-report__price">15 шт.</p>
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Придбання товарів дітям для організації дозвілля та їх розвитку
-                                        </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Проведення благоустрою на території приватної садиби Rosokhy SAS NEST
-                                        </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Закупівля продуктів харчування для біженців
-                                        </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
-                                    </div>
-                                    <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Закупівля медикаментів для біженців
-                                        </p>
-                                        <!--<p class="item-report__count">15 шт.</p>-->
+                                        <p class="lng-item-report__count3 item-report__count ">2 шт.</p>
                                     </div>
                                 </div>
-                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                                <a href="#" class="lng-item-report__link1 item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
                         <!-- Реабілітація -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
-                                <p class="item-report__title">Реабілітація</p>
+                                <p class="lng-item-report__title2 item-report__title">Реабілітація</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
-                                        <p class="item-report__name">
+                                        <p class="lng-item-report__name21 item-report__name">
                                             Облаштування спа кімнати</p>
                                         <!--<p class="item-report__price">50 шт.</p>-->
                                     </div>
 
                                 </div>
-                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                                <a href="#" class="lng-item-report__link2 item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
                         <!-- Створенння бізнесу -->
                         <div class="report__item item-report">
                             <div class="item-report__body">
-                                <p class="item-report__title">Створенння бізнесу</p>
+                                <p class="lng-item-report__title3 item-report__title">Створенння бізнесу</p>
                                 <div class="item-report__boxs">
                                     <div class="item-report__box">
-                                        <p class="item-report__name">
-                                            Обробелно поле та засаджено шафран</p>
+                                        <p class="lng-item-report__name31 item-report__name">
+                                            Оброблено поле та засаджено шафран</p>
                                         <!--<p class="item-report__price">50 шт.</p>-->
                                     </div>
 
                                 </div>
-                                <a href="#" class="item-report__link">Дивитися повний звіт →</a>
+                                <a href="#" class="lng-item-report__link3 item-report__link">Дивитися повний звіт →</a>
                             </div>
                         </div>
                     </div>
@@ -817,7 +779,10 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="action">
+                            <a href="#" class="lng-activity-action1 btn action__btn ">Підтримати</a>
+                            <a href="#" class="lng-activity-action2 btn btn-f action__btn ">Стати партнером</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -905,7 +870,7 @@
                                     <a class="info-contacts__tel info-contacts__item" href="tel:+380980000000">
                                         098-00-00-000 </a>
                                     <a class="info-contacts__mail info-contacts__item"
-                                        href="mailto: abc@example.com">abc@example.com</a>
+                                        href="mailto:abc@example.com">abc@example.com</a>
                                 </div>
                                 <div class="info-contacts__location info-contacts__items">
                                     <p class="info-contacts__title">ДЕ НАС ЗНАЙТИ</p>
@@ -927,8 +892,9 @@
 
 </footer>
         </div>
-        <script src="js/lang.js?_v=20220905142817"></script>
-        <script src="js/app.min.js?_v=20220905142817"></script>
+    </div>
+    <script src="js/lang.js?_v=20220905182123"></script>
+    <script src="js/app.min.js?_v=20220905182123"></script>
 
 
 
